# msgpu_pico

./: .gitignore  CMakeLists.txt  \  a.out  compile_commands.json  linker_script.ld  packages.json  suppressions  test.cpp
api/: symbol_codes.json
arch/: CMakeLists.txt
arch/pico/: CMakeLists.txt  board.cpp  config.hpp  hal_dma.cpp  panic.hpp  qspi.cpp  sync.hpp
arch/pico/generator/: CMakeLists.txt  vga.cpp
arch/pico/i2c/: CMakeLists.txt  i2c.cpp  i2c.hpp
arch/pico/i2c/arch/: i2c.hpp
arch/pico/qspi/: CMakeLists.txt  pio_qspi.cpp  pio_qspi.h  qspi.pio
arch/x86/: CMakeLists.txt  board.cpp  config.hpp  hal_dma.cpp  panic.hpp  qspi.cpp  qspi_bus.cpp  qspi_bus.hpp  sync.cpp
arch/x86/generator/: CMakeLists.txt  vga.cpp
arch/x86/i2c/: CMakeLists.txt  i2c.cpp
arch/x86/ips6404/: ips6404.cpp  ips6404.hpp
include/: CMakeLists.txt  board.hpp  hal_dma.hpp  qspi.hpp
include/arch/: i2c.hpp
include/generator/: CMakeLists.txt  modes.hpp  vga.hpp
lib/: CMakeLists.txt  main.cpp
messages/: begin_primitives.th  change_mode.th  clear_screen.th  draw_line.th  end_primitives.th  get_info.h.j2  header.th  info_req.th  info_resp.th  mode.th  set_perspective.th  set_pixel.th  swap_buffer.th  write_text.th  write_vertex.th
scripts/: CMakeLists.txt  get_info.py  gui_tester.py  initialize_vcom.sh  message_generator.py  requirements.txt  tmp.py
scripts/message_generator/: cpp_generator.py  cpp_header_generator.py  cpp_utils.py  generate.py  python_generator.py  utils.py
simulation/: CMakeLists.txt  main.cpp  vga.cpp
src/: CMakeLists.txt  main.cpp
src/arch/pico/: CMakeLists.txt  board.cpp
src/arch/x86/: CMakeLists.txt  board.cpp
src/config/: CMakeLists.txt  config_manipulator.cpp  config_manipulator.hpp  writer.hpp
src/disk/: CMakeLists.txt  disk.cpp  disk.hpp
src/generator/: CMakeLists.txt  timings.hpp  vga.cpp  vga.hpp
src/gpu/: CMakeLists.txt  main.cpp
src/gpu/arch/: CMakeLists.txt
src/gpu/arch/pico/: CMakeLists.txt  board.cpp
src/gpu/arch/pico/arch/: pins_config.hpp  qspi_config.hpp
src/gpu/arch/x86-64/: CMakeLists.txt  board.cpp
src/gpu/buffers/: CMakeLists.txt  gpu_buffers.cpp
src/gpu/buffers/include/buffers/: gpu_buffers.hpp  id_generator.hpp  vertex_array_buffer.hpp
src/gpu/interfaces/: spi.cpp  usart.cpp
src/gpu/io/: CMakeLists.txt  usart_point.cpp  usart_point.hpp
src/gpu/mode/: CMakeLists.txt  program.cpp  programs.cpp
src/gpu/mode/include/mode/: 2d_graphic_mode.hpp  3d_graphic_mode.hpp  buffer_generator.hpp  indexed_buffer.hpp  mode_base.hpp  module.hpp  program.hpp  programs.hpp  text_mode.hpp  types.hpp  vertex.hpp  vertex_attribute.hpp
src/gpu/modes/: buffer.hpp  colors.hpp  double_buffered_mode_base.hpp  mode_base.hpp  modes.hpp  position.hpp  types.hpp
src/gpu/modes/graphic/: 320x240_12bit.hpp  320x240_256.hpp  graphic_mode.hpp
src/gpu/modes/text/: 80x30_16.hpp  text_mode.hpp
src/gpu/processor/: CMakeLists.txt  human_interface.cpp  machine_interface.cpp  machine_interface.hpp  message_processor.cpp  message_processor.hpp
src/interfaces/: CMakeLists.txt  spi.hpp  usart.hpp
src/io/: CMakeLists.txt  message.hpp  usart_point.cpp  usart_point.hpp
src/libs/: CMakeLists.txt
src/libs/core/: CMakeLists.txt
src/libs/core/include/core/: panic.hpp
src/libs/log/: CMakeLists.txt
src/libs/log/include/log/: log.hpp
src/libs/memory/: CMakeLists.txt  gpuram.cpp  psram.cpp  vram.cpp
src/libs/memory/include/memory/: gpuram.hpp  psram.hpp  vram.hpp
src/libs/mode/include/mode/: 3d_graphic_mode.hpp  mode_base.hpp
src/math/: vector.hpp
src/memory/: CMakeLists.txt  psram.cpp  psram.hpp  video_ram.cpp  video_ram.hpp
src/mode/: 3d_graphic_mode.hpp  buffer.hpp  framebuffer.hpp  mode_base.hpp  modes.hpp
src/modes/: CMakeLists.txt  buffer.hpp  mode_base.cpp  mode_base.hpp  mode_types.cpp  mode_types.hpp  modes.cpp  modes.hpp  palette_mode_base.hpp
src/modes/draw/: draw_256.s  draw_400_o.cpp  draw_400_o.hpp  draw_400_o.s  draw_480_6bit.cpp  draw_480_6bit.hpp  draw_480_6bit.s
src/modes/graphic/: 2d_graphic_mode.hpp  320x240_12bit.hpp  320x240_256.hpp  graphic_mode.hpp
src/modes/text/: 40x30_12bit.hpp  40x30_16.hpp  80x25.cpp  80x25.hpp  80x30_16.hpp  text_mode.hpp
src/processor/: CMakeLists.txt  command_processor.cpp  command_processor.hpp  handler.hpp  human_interface.cpp  human_interface.hpp  machine_interface.cpp  machine_interface.hpp  message_processor.hpp
src/processor/messages/: info_resp.h  messages.h  util.h
src/ramdac/: CMakeLists.txt  app.cpp  app.hpp  boot.cpp  main.cpp
src/ramdac/arch/: CMakeLists.txt
src/ramdac/arch/include/generator/: CMakeLists.txt  vga.hpp
src/ramdac/arch/pico/: CMakeLists.txt  board.cpp  qspi_config.hpp  qspi_pins.hpp
src/ramdac/arch/pico/arch/: hardware_config.hpp  pins_config.hpp  qspi_config.hpp
src/ramdac/arch/x86-64/: CMakeLists.txt  board.cpp
src/ramdac/arch/x86-64/arch/: hardware_config.hpp  pins_config.hpp  qspi_config.hpp
src/ramdac/arch/x86-64/generator/: CMakeLists.txt  vga.cpp
src/ramdac/messages/: change_mode.th
src/ramdac/renderer/: CMakeLists.txt  configs.hpp  renderer.cpp  renderer.hpp
src/utils/: time_critical.hpp
tests/: CMakeLists.txt
tests/st/tests/shaders_tests/: CMakeLists.txt  pass_named_parameters.py  pixel_shader_stub.cpp  shader_stub.cpp  test_shader_named_parameter.py  vertex_shader_stub.cpp
tests/ut/: CMakeLists.txt
tests/ut/buffers/: CMakeLists.txt  gpu_buffers_tests.cpp  id_generator_tests.cpp  memory_mock.hpp  vertex_array_buffer_tests.cpp
tests/ut/io/: CMakeLists.txt  usart_point_tests.cpp
tests/ut/mocks/: CMakeLists.txt
tests/ut/mocks/arch/: CMakeLists.txt  board_stubs.cpp  hal_dma_mocks.cpp  hal_dma_mocks.hpp  i2c_mocks.hpp  i2c_stub.cpp  panic.hpp  qspi_stub.cpp  sync.cpp  sync.hpp  vga_stub.cpp
tests/ut/mocks/arch/arch/: hardware_config.hpp  pins_config.hpp  qspi_config.hpp
tests/ut/mode/: CMakeLists.txt  fragment_shader_stub.cpp  indexed_buffer_tests.cpp  modes_tests.cpp  program_tests.cpp  programs_tests.cpp  vertex_shader_stub.cpp
tests/ut/processor/: CMakeLists.txt  message_processor_tests.cpp
(+21 files in other folders)
